--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 
 .todo-wrapper {
     margin-top: 50px;
-    background-color: #fff;
+    background-color: #eaeaea;
     border-radius: 15px;
     margin-left: auto;
     margin-right: auto;
